@@ -18,15 +18,22 @@
 package org.jackhuang.hmcl.util.io;
 
 import org.jackhuang.hmcl.util.Pair;
+import org.jackhuang.hmcl.util.StringUtils;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
 import java.net.*;
+import java.nio.charset.Charset;
 import java.util.*;
 import java.util.Map.Entry;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.StringUtils.*;
+import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
 /**
  * @author huangyuhui
@@ -34,9 +41,36 @@ import static org.jackhuang.hmcl.util.StringUtils.*;
 public final class NetworkUtils {
     public static final String PARAMETER_SEPARATOR = "&";
     public static final String NAME_VALUE_SEPARATOR = "=";
-    private static final int TIME_OUT = 8000;
+    public static final int TIME_OUT = 8000;
 
     private NetworkUtils() {
+    }
+
+    public static boolean isLoopbackAddress(URI uri) {
+        String host = uri.getHost();
+        if (StringUtils.isBlank(host))
+            return false;
+
+        try {
+            InetAddress addr = InetAddress.getByName(host);
+            return addr.isLoopbackAddress();
+        } catch (UnknownHostException e) {
+            return false;
+        }
+    }
+
+    public static boolean isHttpUri(URI uri) {
+        return "http".equals(uri.getScheme()) || "https".equals(uri.getScheme());
+    }
+
+    public static String addHttpsIfMissing(String url) {
+        if (Pattern.compile("^(?<scheme>[a-zA-Z][a-zA-Z0-9+.-]*)://").matcher(url).find())
+            return url;
+
+        if (url.startsWith("//"))
+            return "https:" + url;
+        else
+            return "https://" + url;
     }
 
     public static String withQuery(String baseUrl, Map<String, String> params) {
@@ -60,6 +94,10 @@ public final class NetworkUtils {
         return sb.toString();
     }
 
+    public static List<URI> withQuery(List<URI> list, Map<String, String> params) {
+        return list.stream().map(uri -> URI.create(withQuery(uri.toString(), params))).collect(Collectors.toList());
+    }
+
     public static List<Pair<String, String>> parseQuery(URI uri) {
         return parseQuery(uri.getRawQuery());
     }
@@ -73,7 +111,7 @@ public final class NetworkUtils {
             scanner.useDelimiter("&");
             while (scanner.hasNext()) {
                 String[] nameValue = scanner.next().split(NAME_VALUE_SEPARATOR);
-                if (nameValue.length <= 0 || nameValue.length > 2) {
+                if (nameValue.length == 0 || nameValue.length > 2) {
                     throw new IllegalArgumentException("bad query string");
                 }
 
@@ -85,81 +123,135 @@ public final class NetworkUtils {
         return result;
     }
 
-    public static URLConnection createConnection(URL url) throws IOException {
-        URLConnection connection = url.openConnection();
-        connection.setUseCaches(false);
+    public static URI dropQuery(URI u) {
+        if (u.getRawQuery() == null && u.getRawFragment() == null) {
+            return u;
+        }
+
+        try {
+            return new URI(u.getScheme(), u.getUserInfo(), u.getHost(), u.getPort(), u.getPath(), null, null);
+        } catch (URISyntaxException e) {
+            throw new AssertionError("Unreachable", e);
+        }
+    }
+
+    public static URLConnection createConnection(URI uri) throws IOException {
+        URLConnection connection;
+        try {
+            connection = uri.toURL().openConnection();
+        } catch (IllegalArgumentException | MalformedURLException e) {
+            throw new IOException(e);
+        }
         connection.setConnectTimeout(TIME_OUT);
         connection.setReadTimeout(TIME_OUT);
-        connection.setRequestProperty("Accept-Language", Locale.getDefault().toLanguageTag());
+        if (connection instanceof HttpURLConnection httpConnection) {
+            httpConnection.setRequestProperty("Accept-Language", Locale.getDefault().toLanguageTag());
+            httpConnection.setInstanceFollowRedirects(false);
+        }
         return connection;
     }
 
-    public static HttpURLConnection createHttpConnection(URL url) throws IOException {
+    public static HttpURLConnection createHttpConnection(String url) throws IOException {
+        return (HttpURLConnection) createConnection(toURI(url));
+    }
+
+    public static HttpURLConnection createHttpConnection(URI url) throws IOException {
         return (HttpURLConnection) createConnection(url);
     }
 
+    private static void encodeCodePoint(StringBuilder builder, int codePoint) {
+        builder.append(encodeURL(Character.toString(codePoint)));
+    }
+
     /**
-     * @see <a href=
-     *      "https://github.com/curl/curl/blob/3f7b1bb89f92c13e69ee51b710ac54f775aab320/lib/transfer.c#L1427-L1461">Curl</a>
      * @param location the url to be URL encoded
      * @return encoded URL
+     * @see <a href=
+     * "https://github.com/curl/curl/blob/3f7b1bb89f92c13e69ee51b710ac54f775aab320/lib/transfer.c#L1427-L1461">Curl</a>
      */
     public static String encodeLocation(String location) {
-        StringBuilder sb = new StringBuilder();
+        int i = 0;
         boolean left = true;
-        for (char ch : location.toCharArray()) {
-            switch (ch) {
-                case ' ':
-                    if (left)
-                        sb.append("%20");
-                    else
-                        sb.append('+');
-                    break;
-                case '?':
-                    left = false;
-                    // fallthrough
-                default:
-                    if (ch >= 0x80)
-                        sb.append(encodeURL(Character.toString(ch)));
-                    else
-                        sb.append(ch);
-                    break;
+        while (i < location.length()) {
+            char ch = location.charAt(i);
+            if (ch == ' '
+                    || ch == '[' || ch == ']'
+                    || ch == '{' || ch == '}'
+                    || ch >= 0x80)
+                break;
+            else if (ch == '?')
+                left = false;
+            i++;
+        }
+
+        if (i == location.length()) {
+            // No need to encode
+            return location;
+        }
+
+        var builder = new StringBuilder(location.length() + 10);
+        builder.append(location, 0, i);
+
+        for (; i < location.length(); i++) {
+            char ch = location.charAt(i);
+            if (ch == ' ') {
+                if (left)
+                    builder.append("%20");
+                else
+                    builder.append('+');
+            } else if (ch == '?') {
+                left = false;
+                builder.append('?');
+            } else if (ch >= 0x80 || (left && (ch == '[' || ch == ']' || ch == '{' || ch == '}'))) {
+                if (Character.isSurrogate(ch)) {
+                    if (Character.isHighSurrogate(ch) && i < location.length() - 1) {
+                        char ch2 = location.charAt(i + 1);
+                        if (Character.isLowSurrogate(ch2)) {
+                            int codePoint = Character.toCodePoint(ch, ch2);
+                            encodeCodePoint(builder, codePoint);
+                            i++;
+                            continue;
+                        }
+                    }
+
+                    // Invalid surrogate pair, encode as U+FFFD (replacement character)
+                    encodeCodePoint(builder, 0xfffd);
+                    continue;
+                }
+
+                encodeCodePoint(builder, ch);
+            } else {
+                builder.append(ch);
             }
         }
 
-        return sb.toString();
-    }
-
-    public static HttpURLConnection resolveConnection(HttpURLConnection conn) throws IOException {
-        return resolveConnection(conn, null);
+        return builder.toString();
     }
 
     /**
      * This method is a work-around that aims to solve problem when "Location" in
      * stupid server's response is not encoded.
      *
-     * @see <a href="https://github.com/curl/curl/issues/473">Issue with libcurl</a>
      * @param conn the stupid http connection.
      * @return manually redirected http connection.
      * @throws IOException if an I/O error occurs.
+     * @see <a href="https://github.com/curl/curl/issues/473">Issue with libcurl</a>
      */
-    public static HttpURLConnection resolveConnection(HttpURLConnection conn, List<String> redirects) throws IOException {
+    public static HttpURLConnection resolveConnection(HttpURLConnection conn) throws IOException {
+        final boolean useCache = conn.getUseCaches();
         int redirect = 0;
         while (true) {
-            conn.setUseCaches(false);
+            conn.setUseCaches(useCache);
             conn.setConnectTimeout(TIME_OUT);
             conn.setReadTimeout(TIME_OUT);
             conn.setInstanceFollowRedirects(false);
             Map<String, List<String>> properties = conn.getRequestProperties();
             String method = conn.getRequestMethod();
             int code = conn.getResponseCode();
-            if (code >= 300 && code <= 307 && code != 306 && code != 304) {
+            if (code >= 300 && code <= 308 && code != 306 && code != 304) {
                 String newURL = conn.getHeaderField("Location");
                 conn.disconnect();
 
-                if (redirects != null) {
-                    redirects.add(newURL);
-                }
                 if (redirect > 20) {
                     throw new IOException("Too much redirects");
                 }
@@ -178,19 +270,23 @@ public final class NetworkUtils {
         return conn;
     }
 
-    public static String doGet(URL url) throws IOException {
-        HttpURLConnection con = createHttpConnection(url);
-        con = resolveConnection(con);
-        return IOUtils.readFullyAsString(con.getInputStream());
+    public static String doGet(String uri) throws IOException {
+        return doGet(toURI(uri));
     }
 
-    public static String doGet(List<URL> urls) throws IOException {
+    public static String doGet(URI uri) throws IOException {
+        URLConnection connection = createConnection(uri);
+        if (connection instanceof HttpURLConnection httpURLConnection) {
+            connection = resolveConnection(httpURLConnection);
+        }
+        return readFullyAsString(connection);
+    }
+
+    public static String doGet(List<URI> uris) throws IOException {
         List<IOException> exceptions = null;
-        for (URL url : urls) {
+        for (URI uri : uris) {
             try {
-                HttpURLConnection con = createHttpConnection(url);
-                con = resolveConnection(con);
-                return IOUtils.readFullyAsString(con.getInputStream());
+                return doGet(uri);
             } catch (IOException e) {
                 if (exceptions == null) {
                     exceptions = new ArrayList<>(1);
@@ -212,7 +308,11 @@ public final class NetworkUtils {
         }
     }
 
-    public static String doPost(URL u, Map<String, String> params) throws IOException {
+    public static String doPost(URI uri, String post) throws IOException {
+        return doPost(uri, post, "application/x-www-form-urlencoded");
+    }
+
+    public static String doPost(URI u, Map<String, String> params) throws IOException {
         StringBuilder sb = new StringBuilder();
         if (params != null) {
             for (Map.Entry<String, String> e : params.entrySet())
@@ -222,50 +322,72 @@ public final class NetworkUtils {
         return doPost(u, sb.toString());
     }
 
-    public static String doPost(URL u, String post) throws IOException {
-        return doPost(u, post, "application/x-www-form-urlencoded");
-    }
-
-    public static String doPost(URL url, String post, String contentType) throws IOException {
+    public static String doPost(URI uri, String post, String contentType) throws IOException {
         byte[] bytes = post.getBytes(UTF_8);
 
-        HttpURLConnection con = createHttpConnection(url);
+        HttpURLConnection con = createHttpConnection(uri);
         con.setRequestMethod("POST");
         con.setDoOutput(true);
         con.setRequestProperty("Content-Type", contentType + "; charset=utf-8");
-        con.setRequestProperty("Content-Length", "" + bytes.length);
+        con.setRequestProperty("Content-Length", String.valueOf(bytes.length));
         try (OutputStream os = con.getOutputStream()) {
             os.write(bytes);
         }
-        return readData(con);
+        return readFullyAsString(con);
     }
 
-    public static String readData(HttpURLConnection con) throws IOException {
-        try {
-            try (InputStream stdout = con.getInputStream()) {
-                return IOUtils.readFullyAsString("gzip".equals(con.getContentEncoding()) ? IOUtils.wrapFromGZip(stdout) : stdout);
+    static final Pattern CHARSET_REGEX = Pattern.compile("\\s*(charset)\\s*=\\s*['|\"]?(?<charset>[^\"^';,]+)['|\"]?");
+
+    public static Charset getCharsetFromContentType(String contentType) {
+        if (contentType == null || contentType.isBlank())
+            return UTF_8;
+
+        Matcher matcher = CHARSET_REGEX.matcher(contentType);
+        if (matcher.find()) {
+            String charsetName = matcher.group("charset");
+            try {
+                return Charset.forName(charsetName);
+            } catch (Throwable e) {
+                // Ignore invalid charset
+                LOG.warning("Bad charset name: " + charsetName + ", using UTF-8 instead", e);
             }
-        } catch (IOException e) {
-            try (InputStream stderr = con.getErrorStream()) {
-                if (stderr == null)
+        }
+        return UTF_8;
+    }
+
+    public static String readFullyAsString(URLConnection con) throws IOException {
+        try {
+            var contentEncoding = ContentEncoding.fromConnection(con);
+            Charset charset = getCharsetFromContentType(con.getHeaderField("Content-Type"));
+
+            try (InputStream stdout = con.getInputStream()) {
+                return IOUtils.readFullyAsString(contentEncoding.wrap(stdout), charset);
+            } catch (IOException e) {
+                if (con instanceof HttpURLConnection) {
+                    try (InputStream stderr = ((HttpURLConnection) con).getErrorStream()) {
+                        if (stderr == null)
+                            throw e;
+                        return IOUtils.readFullyAsString(contentEncoding.wrap(stderr), charset);
+                    }
+                } else {
                     throw e;
-                return IOUtils.readFullyAsString("gzip".equals(con.getContentEncoding()) ? IOUtils.wrapFromGZip(stderr) : stderr);
+                }
+            }
+        } finally {
+            if (con instanceof HttpURLConnection) {
+                ((HttpURLConnection) con).disconnect();
             }
         }
     }
 
-    public static String detectFileName(URL url) throws IOException {
-        HttpURLConnection conn = resolveConnection(createHttpConnection(url));
+    public static String detectFileName(URI uri) throws IOException {
+        HttpURLConnection conn = resolveConnection(createHttpConnection(uri));
         int code = conn.getResponseCode();
         if (code / 100 == 4)
             throw new FileNotFoundException();
         if (code / 100 != 2)
-            throw new IOException(url + ": response code " + conn.getResponseCode());
+            throw new ResponseCodeException(uri, conn.getResponseCode());
 
-        return detectFileName(conn);
-    }
-
-    public static String detectFileName(HttpURLConnection conn) {
         String disposition = conn.getHeaderField("Content-Disposition");
         if (disposition == null || !disposition.contains("filename=")) {
             String u = conn.getURL().toString();
@@ -275,46 +397,28 @@ public final class NetworkUtils {
         }
     }
 
-    public static URL toURL(String str) {
-        try {
-            return new URL(str);
-        } catch (MalformedURLException e) {
-            throw new IllegalArgumentException(e);
-        }
-    }
-
-    public static boolean isURL(String str) {
-        try {
-            new URL(str);
-            return true;
-        } catch (MalformedURLException e) {
-            return false;
-        }
-    }
-
-    public static boolean urlExists(URL url) throws IOException {
-        HttpURLConnection con = createHttpConnection(url);
-        con = resolveConnection(con);
-        int responseCode = con.getResponseCode();
-        con.disconnect();
-        return responseCode / 100 == 2;
-    }
-
     // ==== Shortcut methods for encoding/decoding URLs in UTF-8 ====
     public static String encodeURL(String toEncode) {
-        try {
-            return URLEncoder.encode(toEncode, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new Error();
-        }
+        return URLEncoder.encode(toEncode, UTF_8);
     }
 
     public static String decodeURL(String toDecode) {
+        return URLDecoder.decode(toDecode, UTF_8);
+    }
+
+    /// @throws IllegalArgumentException if the string is not a valid URI
+    public static @NotNull URI toURI(@NotNull String uri) {
         try {
-            return URLDecoder.decode(toDecode, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new Error();
+            return new URI(encodeLocation(uri));
+        } catch (URISyntaxException e) {
+            // Possibly an Internationalized Domain Name (IDN)
+            return URI.create(uri);
         }
     }
+
+    public static @NotNull URI toURI(@NotNull URL url) {
+        return toURI(url.toExternalForm());
+    }
     // ====
+
 }
